Another bug relative path in loading.

--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,14 @@
+== 0.0.7
+
+* Create a watch rules based on the compass config (no more need to create watchers)
+* [BUGFIX] #1: You can now define the options :project_path and :configuration_file to
+find and run Compass Compiler (see README for more information). This was a problem with
+non-standard deployment
+
 == 0.0.6
 
-Guard quit on ctrl-c when guard-compass is in
+* Guard quit on ctrl-c when guard-compass is in
 
 == 0.0.5
 
-Initial release
+* Initial release
